--- a/app/views/apis/index.html.erb
+++ b/app/views/apis/index.html.erb
@@ -1,1 +1,11 @@
 API Index Page
+
+<div class="apis">
+  <% @apis.each do |api| %>
+    <li>
+      <%= link_to(api.name, api_path(api)) %>
+      <%= api.url %>
+      <%= api.description %>
+    </li>
+  <% end %>
+</div>
