--- a/app/views/apis/new.html.erb
+++ b/app/views/apis/new.html.erb
@@ -1,6 +1,6 @@
 New API Creation Page
 
-<%= form_for :api, html: { id: :new_api } do |f| %>
+<%= form_for @api do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.label :url, "URL" %>
