--- a/app/views/apis/new.html.erb
+++ b/app/views/apis/new.html.erb
@@ -1,15 +1,18 @@
-New API Creation Page
+<h2>New API Creation Page</h2>
 
-<%= form_for @api do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :url, "URL" %>
-  <%= f.text_field :url %>
-  <%= f.label :description %>
-  <%= f.text_field :description %>
+<p>
+  <%= form_for @api do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+    <%= f.label :url, "URL" %>
+    <%= f.text_field :url %>
+    <%= f.label :description %>
+    <%= f.text_field :description %>
 
-  Paid?
-  <%= f.collection_radio_buttons(:paid, [[true, "Yes."], [false, "No."]], :first, :last) %>
+    Paid?
+    <%= f.collection_radio_buttons(:paid, [[true, "Yes."], [false, "No."]],
+      :first, :last) %>
 
-  <%= f.submit "Create API" %>
-<% end %>
+    <%= f.submit "Create API" %>
+  <% end %>
+</p>
