Worked on the top-bar functionality and fixed hound errors

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -3,6 +3,8 @@
 @import 'settings';
 @import 'foundation';
 
+// @import 'motion-ui/motion-ui';
+
 @include foundation-global-styles;
 @include foundation-grid;
 @include foundation-typography;
@@ -38,3 +40,6 @@
 @include foundation-title-bar;
 @include foundation-tooltip;
 @include foundation-top-bar;
+
+// @include motion-ui-transitions;
+// @include motion-ui-animations;
