--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,49 +8,23 @@
       <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
     <% end %>
 
+    <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+
     <div class="top-bar">
       <div class="top-bar-left">
-        <ul class="dropdown menu" data-dropdown-menu>
-          <li class="menu-text">Site Title</li>
-          <li><a href=<%= new_api_path %>>Add New</a></li>
-          <li><a href=<%= apis_path %>>View All by Category</a></li>
-          <li><a href="#">View All by Popularity</a></li>
-          <li><a href="#">Show Random</a></li>
-          <li>
-            <a href="#">Roll Dice</a>
-            <ul class="menu vertical">
-              <li><a href="#">Two</a></li>
-              <li><a href="#">Three</a></li>
-              <li><a href="#">Four</a></li>
-              <li><a href="#">Six</a></li>
-              <li><a href="#">Eight</a></li>
-              <li><a href="#">Ten</a></li>
-              <li><a href="#">Twelve</a></li>
-              <li><a href="#">Twenty</a></li>
-            </ul>
-          <li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">My Profile</a></li>
-        </ul>
-      </div>
-      <div class="top-bar-right">
-        <ul class="menu">
-          <li><input type="search" placeholder="Search"></li>
-          <li><button type="button" class="button">SEARCH</button></li>
-        </ul>
+        <li class="menu-text">API Addict</li>
+        <li><%= link_to("Add New", new_api_path) %></li>
+        <li><%= link_to("View All by Category", apis_path) %></li>
       </div>
     </div>
 
-    <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
-
     <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
 
   <body>
-
     <%= yield %>
-
   </body>
+
 </html>
