--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,42 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <% flash.each do |name, msg| %>
-      <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
-    <% end %>
+  <% flash.each do |name, msg| %>
+  <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+  <% end %>
 
-    <div class=flash_messages>
-      <%= display_flash_messages %>
+  <div class=flash_messages>
+    <%= display_flash_messages %>
+  </div>
+
+  <div class="top-bar">
+    <div class="top-bar-left">
+      <ul class="dropdown menu" data-dropdown-menu>
+        <li class="menu-text">Site Title</li>
+        <li>
+          <a href="#">One</a>
+          <ul class="menu vertical">
+          </ul>
+        </li>
+        <li><%= link_to("Add New", new_api_path) %></li>
+        <li><%= link_to("View All by Category", apis_path) %></li>
+      </ul>
     </div>
-
-    <div class="top-bar">
-      <div class="top-bar-left">
-        <ul class="dropdown menu" data-dropdown-menu>
-          <li class="menu-text">Site Title</li>
-          <li>
-            <a href="#">One</a>
-            <ul class="menu vertical">
-              <li><a href="#">One</a></li>
-              <li><a href="#">Two</a></li>
-              <li><a href="#">Three</a></li>
-            </ul>
-          </li>
-          <li><%= link_to("Add New", new_api_path) %></li>
-          <li><%= link_to("View All by Category", apis_path) %></li>
-          <li><a href="#">Two</a></li>
-          <li><a href="#">Three</a></li>
-        </ul>
-      </div>
-      <div class="top-bar-right">
-        <ul class="menu">
-          <% if user_signed_in? %>
-            <li><%= link_to 'Sign Out', '#' %></li>
-          <% else %>
-            <li><%= link_to 'Sign In', new_user_session_path %>
-            <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+    <div class="top-bar-right">
+      <ul class="menu">
+        <% if user_signed_in? %>
+        <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
+        <% else %>
+        <li><%= link_to 'Sign In', new_user_session_path %>
+          <li><%= link_to 'Sign Up', new_user_registration_path %></li>
           <% end %>
           <li><input type="search" placeholder="Search"></li>
           <li><button type="button" class="button">Search</button></li>
@@ -53,4 +48,4 @@
     <%= yield %>
   </body>
 
-</html>
+  </html>
