--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,10 @@
           <li><%= link_to 'Sign In', new_user_session_path %>
             <li><%= link_to 'Sign Up', new_user_registration_path %></li>
             <% end %>
-            <li><input type="search" placeholder="Search"></li>
-            <li><button type="button" class="button">Search</button></li>
+            <%= form_tag(apis_path, :method => "get", id: "search-form") do %>
+            <%= text_field_tag :search, params[:search], placeholder: "Search Api" %>
+            <%= submit_tag "Search" %>
+            <% end %>
           </ul>
         </div>
       </div>
