--- a/app/assets/stylesheets/api_addicts.scss
+++ b/app/assets/stylesheets/api_addicts.scss
@@ -1,15 +1,15 @@
 .arrow-up {
-  width: 0;
-  height: 0;
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
-  border-bottom: 20px solid green;
+  border-bottom: 20px solid #008000;
+  width: 0;
+  height: 0;
 }
 
 .arrow-down {
-  width: 0;
-  height: 0;
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
-  border-top: 20px solid #f00;
+  border-top: 20px solid #B0171F;
+  width: 0;
+  height: 0;
 }
