--- a/app/views/apis/show.html.erb
+++ b/app/views/apis/show.html.erb
@@ -1,32 +1,41 @@
-<h2><%= @api.name %></h2>
-
-<p>
-  <%= @api.url %> <br /><br />
-  <%= @api.description %><br />
-  <%= "Posted By: #{@api.user.first_name} #{@api.user.last_name}"%><br />
-  <%= "Posted On: #{@api.created_at.strftime("%m-%d-%Y")}"%><br />
-
-<% if @api.paid %>
-  <p>This API is not free! (It costs money)</p>
-<% else %>
-  <p>This API is free!</p>
-<% end %>
-
-<% tags = "" %>
-  <% @api.tags.each do |tag| %>
-  <% tags += "#{tag.name} " %>
-  <% end %>
-<%= "TAGS: #{tags} " %>
-</p>
-<h3>Reviews for this API</h3>
-
-<ul>
-  <% @reviews.each do |review|%>
-    <li>
-      <%= review.body %>
-      <%= review.rating %>
+<div class="row">
+  <div class="large-12 columns">
+    <h2><%= @api.name %></h2>
+    <p>
+      <div class="column">
+        <div class="large-3 rows">
+          <%= @api.url %>
+        </div>
+        <div class="large-3 rows">
+          <%= @api.description %>
+        </div>
+        <div class="large-3 rows">
+          <%= "Posted By: #{@api.user.first_name} #{@api.user.last_name}"%>
+        </div>
+        <div class="large-3 rows">
+          <%= "Posted On: #{@api.created_at.strftime("%m-%d-%Y")}"%>
+        </div>
+      </div>
+      <% if @api.paid %>
+        <p>This API is not free! (It costs money)</p>
+      <% else %>
+        <p>This API is free!</p>
       <% end %>
-    </li>
-</ul>
-
-<%= render partial: 'new_review_form', object: @review %>
+      <% tags = "" %>
+        <% @api.tags.each do |tag| %>
+        <% tags += "#{tag.name} " %>
+      <% end %>
+      <%= "TAGS: #{tags} " %>
+    </p>
+    <h3>Reviews for this API</h3>
+    <ul>
+      <% @reviews.each do |review|%>
+      <li>
+        <%= review.body %>
+        <%= review.rating %>
+        <% end %>
+      </li>
+    </ul>
+    <%= render partial: 'new_review_form', object: @review %>
+  </div>
+</div>
