--- a/app/assets/stylesheets/api_addicts.scss
+++ b/app/assets/stylesheets/api_addicts.scss
@@ -1,15 +1,17 @@
+@import 'settings';
+
 .arrow-up {
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
-  border-bottom: 20px solid #008000;
-  width: 0;
+  border-bottom: 20px solid $upvote-color;
   height: 0;
+  width: 0;
 }
 
 .arrow-down {
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
-  border-top: 20px solid #B0171F;
-  width: 0;
+  border-top: 20px solid $downvote-color;
   height: 0;
+  width: 0;
 }
