--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,8 @@
       <div class="top-bar-right">
         <ul class="menu">
           <% if user_signed_in? %>
-          <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
+            <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
+            <li><%= link_to 'My Profile', user_path(current_user) %></li>
           <% else %>
           <li><%= link_to 'Sign In', new_user_session_path %>
             <li><%= link_to 'Sign Up', new_user_registration_path %></li>
