--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
 <h1><%="#{@user.first_name} #{@user.last_name}"%></h1>
+<%= image_tag(@user.profile_photo, size: "140") %>
 <h2><%=@user.email%></h2>
-<%= image_tag(@user.profile_photo) %>
