Finishing touches on the search bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,20 +19,25 @@
       <div class="top-bar-right">
         <ul class="menu">
           <% if user_signed_in? %>
-          <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
+            <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
           <% else %>
-          <li><%= link_to 'Sign In', new_user_session_path %>
+            <li><%= link_to 'Sign In', new_user_session_path %>
             <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-            <% end %>
-            <li><input type="search" placeholder="Search"></li>
-            <li><button type="button" class="button">Search</button></li>
-          </ul>
-        </div>
+          <% end %>
+          <%= form_tag(apis_path, method: 'get', id: 'search-form') do %>
+            <%= text_field_tag :search, params[:search],
+              placeholder: "Weather API" %>
+            <%= submit_tag "Search" %>
+          <% end %>
+        </ul>
       </div>
-      <%= stylesheet_link_tag    "application" %>
-      <%= javascript_include_tag "application" %>
-      <%= csrf_meta_tags %>
-    </head>
+    </div>
+
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
+
     <body>
       <%= yield %>
     </body>
