--- a/app/assets/stylesheets/api-addicts2.scss
+++ b/app/assets/stylesheets/api-addicts2.scss
@@ -89,6 +89,18 @@
   padding: 15px;
 }
 
+.api-show {
+  background-color: #4B97B1;
+  border-radius: 12px;
+  box-shadow: 2px 2px #000000;
+  padding: 15px;
+}
+
+.api-review {
+  background-color: #4B97B1;
+  padding: 15px;
+}
+
 .api-listing:hover{
   background-color: #2EB6E5;
   border-style: solid;
