--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,8 @@
         <% end %>
       </div>
     </div>
-    <div class="row full" style="height: 100px;" data-equalizer>
-      <div class="medium-8 columns" style="height: 100px;" data-equalizer>
+    <div class="row full" style="height: 75px;" data-equalizer>
+      <div class="medium-8 columns" style="height: 75px;" data-equalizer>
         <div class="medium-3 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
           <%= link_to("ADD NEW", new_api_path) %>
         </div>
@@ -31,7 +31,7 @@
           <%= link_to("VIEW ALL APIS", apis_path) %></li>
         </div>
         <div class="medium-3 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
-          SHOW RANDOM
+          <%= link_to("VIEW RANDOM", apis_random_path) %></li>
         </div>
         <div class="medium-3 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
           ABOUT
@@ -40,7 +40,7 @@
           VIEW PROFILE
         </div> -->
       </div>
-      <div class="medium-4 columns" style="height: 100px;" data-equalizer>
+      <div class="medium-4 columns" style="height: 75px;" data-equalizer>
         <div class="medium-12 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
           SEARCH
         </div>
