--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,33 +7,60 @@
     <div class=flash_messages>
       <%= display_flash_messages %>
     </div>
-
-    <div class="top-bar">
-      <div class="top-bar-left">
-        <ul class="dropdown menu" data-dropdown-menu>
-          <li class="menu-text">Site Title</li>
-          <li><%= link_to("Add New", new_api_path) %></li>
-          <li><%= link_to("View All by Category", apis_path) %></li>
-        </ul>
+    <div class="row full" style="height: 45px;" data-equalizer>
+      <div class="medium-8 columns medium-title top-bar float-left" data-equalizer-watch style="background-color: #9E9E9E; text-align: left;">
+        API Addicts
       </div>
-      <div class="top-bar-right">
-        <ul class="menu">
-          <% if user_signed_in? %>
-          <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
-          <% else %>
-          <li><%= link_to 'Sign In', new_user_session_path %>
-            <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-            <% end %>
-            <li><input type="search" placeholder="Search"></li>
-            <li><button type="button" class="button">Search</button></li>
-          </ul>
+      <div class="medium-2 columns small-title top-bar" style="background-color: #9E9E9E;">
+        <%= link_to 'Sign Up', new_user_registration_path %>
+      </div>
+      <div class="medium-2 columns small-title top-bar" style="background-color: #9E9E9E;">
+        <% if user_signed_in? %>
+          <%= link_to 'Sign Out', destroy_user_session_path %>
+        <% else %>
+          <%= link_to 'Sign In', new_user_session_path %>
+        <% end %>
+      </div>
+    </div>
+    <div class="row full" style="height: 75px;" data-equalizer>
+      <div class="medium-8 columns" style="height: 75px;" data-equalizer>
+        <div class="medium-3 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
+          <%= link_to("ADD NEW", new_api_path) %>
+        </div>
+        <div class="medium-3 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
+          <%= link_to("VIEW ALL APIS", apis_path) %></li>
+        </div>
+        <div class="medium-3 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
+          <%= link_to("VIEW RANDOM", apis_random_path) %></li>
+        </div>
+        <div class="medium-3 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
+          ABOUT
+        </div>
+        <!-- <div class="medium-1 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
+          VIEW PROFILE
+        </div> -->
+      </div>
+      <div class="medium-4 columns" style="height: 75px;" data-equalizer>
+        <div class="medium-12 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
+          SEARCH
         </div>
       </div>
-      <%= stylesheet_link_tag    "application" %>
-      <%= javascript_include_tag "application" %>
-      <%= csrf_meta_tags %>
+    </div>
+    <%= stylesheet_link_tag "application" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+
     </head>
     <body>
       <%= yield %>
     </body>
   </html>
+
+  <!-- <% if user_signed_in? %>
+  <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
+  <% else %>
+  <li><%= link_to 'Sign In', new_user_session_path %>
+    <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+  <% end %>
+  <li><%= link_to("Add New", new_api_path) %></li>
+  <li><%= link_to("View All by Category", apis_path) %></li> -->
