further styling show page

--- a/app/assets/stylesheets/api-addicts2.scss
+++ b/app/assets/stylesheets/api-addicts2.scss
@@ -131,6 +131,14 @@
   padding: 50px;
 }
 
+.api-details {
+  background-color: #E46866;
+  margin: 10px;
+  border-radius: 12px;
+  box-shadow: 2px 2px #000000;
+  padding: 50px;
+}
+
 .category-listing:hover{
   background-color: #2EB6E5;
   border-style: solid;
