--- a/app/views/apis/new.html.erb
+++ b/app/views/apis/new.html.erb
@@ -6,7 +6,7 @@
     <%= f.text_field :url, id: "URL" %>
     <%= f.text_field :description, id: "Description" %>
     <%= f.text_field :tags, value: "", id: "Tags" %>
-
+    <%= f.select :category, options_for_select(Api::CATEGORIES) %>
     Paid?
     <%= f.collection_radio_buttons(:paid, [[true, "Yes."], [false, "No."]],
       :first, :last) %>
