--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,17 +28,14 @@
           <%= link_to("ADD NEW", new_api_path) %>
         </div>
         <div class="medium-3 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
-          <%= link_to("VIEW ALL APIS", apis_path) %></li>
+          <%= link_to("VIEW ALL APIS", apis_path) %>
         </div>
         <div class="medium-3 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
-          <%= link_to("VIEW RANDOM", apis_random_path) %></li>
+          <%= link_to("VIEW RANDOM", apis_random_path) %>
         </div>
         <div class="medium-3 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
-          ABOUT
+          <%= link_to("ABOUT", apis_about_path) %>
         </div>
-        <!-- <div class="medium-1 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
-          VIEW PROFILE
-        </div> -->
       </div>
       <div class="medium-4 columns" style="height: 75px;" data-equalizer>
         <div class="medium-12 columns top-menu-bg detail-text-medium float-left" data-equalizer-watch>
