styling and flash notice updates

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -51,7 +51,8 @@ $foundation-palette: (
   primary: #2199e8,
   secondary: #777,
   success: #3adb76,
-  warning: #ffae00,
+  warning: #670a0a,
+  warnText: #a5f2d4,
   alert: #ec5840,
 );
 $api-darkblue: #032f3e;
