--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-
+<%= link_to "Delete User", @user, method: :delete, data: {confirm: "Really wanna delete this USER?"} %>
 <h1><%="#{@user.first_name} #{@user.last_name}"%></h1>
 <h2><%=@user.email%></h2>
 <h3>Apis Posted by <%= @user.first_name %></h3>
@@ -24,10 +24,9 @@
 <ul>
   <% @reviews.each do |review| %>
   <li>
+    <%= link_to "Delete Review", user_path(@user, review), method: :delete, data: {confirm: "Really wanna delete this Review?"} %>
     <%= review.body %>
     <%= review.rating %>
     <% end %>
   </li>
 </ul>
-
-<%= link_to "Delete", @user, method: :delete, data: {confirm: "Really wanna delete this USER?"} %>
