test for Heroku

--- a/app/assets/stylesheets/api-addicts2.scss
+++ b/app/assets/stylesheets/api-addicts2.scss
@@ -215,6 +215,9 @@
   background-color: #7C8C91;
   color: #FFFFFF;
 }
+.center_pagination{
+  align: center;
+}
 
 .row.full { width: 100%; max-width: 100%; }
 .row.full>.column:first-child,
