--- a/app/views/apis/new.html.erb
+++ b/app/views/apis/new.html.erb
@@ -9,7 +9,7 @@
         <%= f.text_field :url, id: "URL", value: @api.url, style: 'display: block; background-color: #7C8C91;' %>
         <%= f.text_field :description, id: "Description", value: @api.description, style:  'display: block; background-color: #7C8C91;' %>
         <%= f.text_field :tags, value: "", id: "Tags", style: 'display: block; background-color: #7C8C91;' %>
-
+        <%= f.select :category, options_for_select(Api::CATEGORIES) %>
         Paid?
         <%= f.collection_radio_buttons(:paid, [[true, "Yes."], [false, "No."]],
         :first, :last) %>
